# native-sparse-attention

./: .gitignore  README.md
examples/: cuda_test.c
include/: nsa_cuda_kernels.h
native-sparse-attention-c/: CMakeLists.txt  README.md
native-sparse-attention-c/examples/: test_nsa.c
native-sparse-attention-c/include/: nsa.h  nsa_cuda_helpers.cuh  nsa_types.h
native-sparse-attention-c/src/: nsa.c  nsa_compress_kernel.cu  nsa_gating_kernel.cu  nsa_importance_kernel.cu
src/: nsa_attention_kernel.cu
